--- a/index.css
+++ b/index.css
@@ -49,6 +49,7 @@ table {
 
 body{
     margin: 0;
+    font-size: 62.5%;
 }
 
 canvas{
@@ -60,4 +61,23 @@ canvas{
     background-color: #612123;
     width: 100%;
     height: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#instructions{
+    display: none;
+    margin: 2% 2% 0;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+#readyButton{
+    display: none;
+    margin-bottom: 2%;
+    font-size: 2rem;
+    background-color: #612123;
+    border: none;
 }
