hearts and livesContainer added

--- a/index.css
+++ b/index.css
@@ -64,7 +64,8 @@ canvas{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
+    font-size: 2rem;
 }
 
 #instructions{
